Fix lng select z-index

--- a/src/styles/views/entry/_overview.scss
+++ b/src/styles/views/entry/_overview.scss
@@ -35,6 +35,8 @@
     &--content {
       ._bcmsInput {
         min-width: 200px;
+        z-index: 310;
+        position: relative;
         max-width: max-content;
         margin-bottom: 20px;
       }
